--- a/A01_Euclidean_distance/A01_Euclidean_distance/A01_Euclidean_distance.csproj
+++ b/A01_Euclidean_distance/A01_Euclidean_distance/A01_Euclidean_distance.csproj
@@ -44,6 +44,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Point.cs" />
+    <Compile Include="Polygon.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
